--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         <div>
             <button onclick="incrementValue()">Increment Value</button>
         </div>
+        <div>
+            <p id="resultDisplay"></p>
+        </div>
     </div>
-    <script src="web3.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
+
